# ModernKhaiii

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  requirements.txt
cmake/: CodeCoverage.cmake  FindGperftools.cmake
docker/: Dockerfile
src/main/cpp/: main.cpp
src/main/cpp/khaiii/: Embed.hpp  KhaiiiImpl.hpp  Restore.hpp  Tagger.hpp  Trie.hpp
src/main/cpp/khaiii/nn/: tensor.cpp  tensor.hpp
src/main/python/: setup.py.in
src/test/cpp/: test_main.cpp
